--- a/site/.vuepress/styles/index.styl
+++ b/site/.vuepress/styles/index.styl
@@ -1,1 +1,43 @@
+body
+  transition background-color 0.3s ease, color 0.3s ease
 
+.dark-mode-toggle
+  background none
+  border none
+  cursor pointer
+  font-size 1.2em
+  margin-left 1rem
+
+html.dark body
+  background-color #1e1e1e
+  color #ddd
+
+html.dark a
+  color lighten($accentColor, 20%)
+
+html.dark .navbar
+  background-color #2c2c2c
+
+html.dark .navbar a
+  color #ddd
+
+html.dark .sidebar
+  background-color #242424
+  color #ddd
+
+html.dark .sidebar a
+  color #ddd
+
+html.dark .sidebar-heading
+  color #ccc
+
+html.dark pre, html.dark code
+  background-color #2a2a2a
+  color #eee
+
+html.dark input
+  background-color #3a3a3a
+  color #eee
+
+html.dark .theme-default-content
+  background-color #1e1e1e
