--- a/site/.vuepress/styles/index.styl
+++ b/site/.vuepress/styles/index.styl
@@ -1,1 +1,72 @@
+body
+  transition background-color 0.3s ease, color 0.3s ease
 
+.dark-mode-toggle
+  background none
+  border none
+  cursor pointer
+  font-size 1.2em
+  margin-left 1rem
+
+html.dark
+  background-color #1e1e1e
+
+html.dark body
+  background-color #1e1e1e
+  color #ddd
+
+html.dark a
+  color lighten($accentColor, 20%)
+
+html.dark .navbar
+  background-color #2c2c2c
+  border-bottom: 1px solid #3a3a3a
+
+html.dark .navbar .site-name
+  color #ddd
+
+html.dark .navbar a
+  color #ddd
+
+html.dark .sidebar
+  background-color #242424
+  color #ddd
+  border-right: 1px solid #3a3a3a
+
+html.dark .navbar .links
+  background-color: #2c2c2c
+
+html.dark .sidebar a
+  color #ddd
+
+html.dark .sidebar-heading
+  color #ccc
+
+html.dark pre, html.dark code
+  background-color #2a2a2a
+  color #eee
+
+html.dark input
+  background-color #3a3a3a
+  color #eee
+
+html.dark .theme-default-content
+  background-color #1e1e1e
+
+html.dark .home .features, html.dark .home .footer, html.dark hr
+  border-top: 1px solid #3a3a3a
+
+html.dark h1, html.dark h2, html.dark h3, html.dark h4, html.dark h5, html.dark h6
+  border-bottom: 1px solid #3a3a3a
+
+html.dark .hero h1
+  border: none;
+
+html.dark tr, html.dark th, html.dark td
+  border: 1px solid #3a3a3a
+
+html.dark tr:nth-child(2n)
+  background-color: #2a2a2a
+
+html.dark blockquote
+  border-left: 0.2rem solid #3a3a3a
